🔧 Remove --illegal-access=deny parameter
Why:
- Since Java 16, the default value of --illegal-access is now deny
  rather than permit, and the option will be removed in a future release
    https://www.oracle.com/java/technologies/javase/16-relnote-issues.html#JDK-8256299